--- a/.github/workflows/master_to_prod.yml
+++ b/.github/workflows/master_to_prod.yml
@@ -11,28 +11,17 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - run: |
-        git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/action-test.git
-        git fetch origin master
-        git fetch origin prod
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        TZ: Asia/Tokyo
-    - run: |
-        cat << EOF > pr.template
-        [Production] Release <%= Time.now.strftime("%F %T") %>
-        <% pull_requests.each do |pr| -%>
-        <%= pr.to_checklist_item %>
-        <% end -%>
-        EOF
     - name: Set up Ruby
-    - uses: actions/setup-ruby@v1
+      uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
+    - name: Create PR
       env:
-        GIT_PR_RELEASE_TEMPLATE: ./pr.template
         GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         GIT_PR_RELEASE_BRANCH_STAGING: main
         GIT_PR_RELEASE_BRANCH_PRODUCTION: prod
         GIT_PR_RELEASE_LABELS: "Release/Production"
         TZ: Asia/Tokyo
+      run: |
+        gem install -N git-pr-release -v "1.2.0"
+        git-pr-release --no-fetch
