--- a/.github/workflows/master_to_prod.yml
+++ b/.github/workflows/master_to_prod.yml
@@ -1,27 +1,29 @@
-name: Create PR
+name: Create a release pull request
+
 on:
   push:
     branches:
-      - main
+      - develop
+
 jobs:
-  PRReleaseProd:
-    name: Create PR to prod
+  create-release-pr:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Set up Ruby
+
+    - name: Set up Ruby 2.6
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
-    - name: Create PR
+
+    - name: Create a release pull request
       env:
         GIT_PR_RELEASE_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        GIT_PR_RELEASE_BRANCH_STAGING: main
-        GIT_PR_RELEASE_BRANCH_PRODUCTION: prod
-        GIT_PR_RELEASE_LABELS: "Release/Production"
-        TZ: Asia/Tokyo
+        GIT_PR_RELEASE_BRANCH_PRODUCTION: master
+        GIT_PR_RELEASE_BRANCH_STAGING: develop
+        GIT_PR_RELEASE_LABELS: release
       run: |
         gem install -N git-pr-release -v "1.2.0"
         git-pr-release --no-fetch
